--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_logout">Logout</string>
     <string name="map_text">Map</string>
-    <string name="google_maps_key">AIzaSyCetUBMlE2Pm0_Tub0u7aQG84mhoYvG1us</string>
+    <string name="google_maps_key">"Enter your key"</string>
     <string name="water_username">AdminWaterDepartment</string>
     <string name="water_password">Maps@1234</string>
     <string name="garbage_username">AdminGarbageDepartment</string>
